--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" href="./public/ito.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
